[tool.poetry]
name = "susapad"
version = "0.1.0"
description = "SusaPad's Software configurator"
authors = ["RickBarretto <78623871+RickBarretto@users.noreply.github.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyserial = "^3.5"
pyside6 = "6.5.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
